<resources>
    <string name="app_name">UserLogin</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="logout">LOGOUT</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="sqlite_user_login_screen">SQLite User Login Screen</string>
    <string name="log_in">Log IN</string>
    <string name="sign_up">Sign up</string>
</resources>