<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="20dp">


    <TextView
        android:text="SQLite User Login Screen"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:padding="20dp"
        android:id="@+id/loginImage"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginImage"
        android:layout_margin="10dp"
        android:hint="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/myMail"
            android:inputType="textWebEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/editEmail"

        android:hint="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/myPass"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#3E298C"
        android:text="Log IN "
        android:textColor="#FFFFFF" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/buttonLogin"
    android:text="@string/don_t_have_account"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#3E298C"
        android:text="Sign up"
        android:textColor="#FFFFFF" />

</RelativeLayout>
